--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "craco-less": "^1.17.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-liquid-gauge": "^1.2.4",
     "react-scripts": "3.4.1"
   },
   "scripts": {
@@ -35,7 +36,6 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^26.0.4",
-    "jest": "^26.1.0"
+    "@types/jest": "^26.0.4"
   }
 }
