--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.13.1",
     "react-liquid-gauge": "^1.2.4",
     "react-scripts": "3.4.1",
+    "recharts": "^1.8.5",
     "typeface-roboto": "^0.0.75"
   },
   "scripts": {
