db.json for my-json-server

--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,7 @@ yarn-error.log*
 .netlify
 
 # Fake Database API
+# Create a repository on GitHub (<your-username>/<your-repo>)
+# Create a db.json file
+# Visit https://my-json-server.typicode.com/<your-username>/<your-repo> to access your server
 createFakeDb.js
-DB.json
