--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,5 @@ yarn-error.log*
 # Local Netlify folder
 .netlify
 
-# Fake Database API
-# Create a repository on GitHub (<your-username>/<your-repo>)
-# Create a db.json file
-# Visit https://my-json-server.typicode.com/<your-username>/<your-repo> to access your server
-createFakeDb.js
+# Mock Database API - JSON-Server
+createMockDb.js
