--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "yarn run build && netlify deploy --prod"
+    "deploy": "yarn run build && netlify deploy --prod",
+    "json-server": "npx json-server --watch ./src/mockDb.json --port 3333"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^26.0.4"
+    "@types/jest": "^26.0.4",
+    "json-server": "^0.16.1"
   }
 }
