--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-liquid-gauge": "^1.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "recharts": "^1.8.5",
+    "recharts": "1.8.5",
     "typeface-roboto": "^0.0.75"
   },
   "scripts": {
