--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "typeface-roboto": "^0.0.75"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -42,6 +42,9 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.4",
-    "json-server": "^0.16.1"
+    "babel-plugin-import": "^1.13.0",
+    "customize-cra": "^1.0.0",
+    "json-server": "^0.16.1",
+    "react-app-rewired": "^2.1.6"
   }
 }
