--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "recharts": "1.8.5",
+    "recharts": "^2.0.0-beta.6",
     "typeface-roboto": "^0.0.75"
   },
   "scripts": {
