--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-use": "^15.3.2",
     "recharts": "^2.0.0-beta.6",
     "typeface-roboto": "^0.0.75"
   },
