:zap: not auto script start

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,9 +6,9 @@
     {
       "label": "init",
       "dependsOrder": "sequence",
-      "runOptions": {
-        "runOn": "folderOpen"
-      },
+      // "runOptions": {
+      //   "runOn": "folderOpen"
+      // },
       "dependsOn": ["client-dev"]
     },
     {
