--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "react-scripts": "3.4.1",
     "react-use": "^15.3.2",
     "recharts": "^2.0.0-beta.6",
+    "tailwindcss": "^1.6.2",
     "typeface-roboto": "^0.0.75"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-scripts build",
+    "build:tailwind": "tailwindcss build src/tailwind.css -o src/tailwind.output.css",
+    "prestart": "npm run build:tailwind",
+    "prebuild": "npm run build:tailwind",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "git push origin master && yarn run build && netlify deploy --prod",
