--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "notistack": "^0.9.17",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-liquid-gauge": "^1.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
